<resources>
    <string name="app_name">MyNote</string>
    <string name="note_detail">Don\'t Save</string>
    <string name="empty_not_saved">Empty Not Saved</string>
    <string name="ok">Delete</string>
    <string name="cancel">No</string>
    <string name="dialog_title">Delete !</string>
    <string name="dialog_message">Are you sure to delete?</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="details_hint">More details</string>
    <string name="empty">No note to show \n To Add new note \n Press +</string>
    <string name="date">%1$d hi</string>
    <string name="delete">Delete</string>
    <string name="start_image">start image</string>
    <string name="my_note">My Note</string>
    <string name="detail_image">detail image</string>
    <string name="add_date">add date</string>
    <string name="add_image">add image</string>
    <string name="no_note_image">no note image</string>
    <string name="delete_note">delete note</string>
    <string name="remove_image">remove image</string>
    <string name="normal">normal</string>
    <string name="important">important</string>
    <string name="very_important">very important</string>
    <string name="search">search</string>
    <string name="snack_bar_undo">UNDO</string>
    <string name="snack_bar_delete_text">Undo archived note</string>
    <string name="snack_bar_completed_text">Non completed</string>
    <string name="snack_bar_non">Non</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="text_archived_note_fragment">Archived Notes</string>
    <string name="text_up_coming_alarms_fragment">Up Coming Alarms</string>
</resources>